Created attachment 119122 [details] Example table with bug Make a table of 3 cells in a row. Put any negative number in A1 cell. Type in the following formula in B1 cell: =<A1>^2 You get negative result. However, any even power should be positive whanever the parameter is. Type in the following formula in C1 cell: =(<A1>)^2 Now you get what you expect - positive square power of A1. I know about bug in operations order in Calc and Excel, but in Writer I don't have minus sign directly in the cell formula.
Thank you, Alexander, for helping us to improve LibreOffice. I see the bug on Linux in both daily dbgutil bibisect version 2015-09-28 and version 3.5.4.2 as distributed with debian wheezy. I am setting status NEW, o/s All, version 3.5.4, and priority Major. Terry.
Oliver Specht committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bd2a5eedd91466f97806e198b125546d256d1f8 tdf#94624 calculation of power operator fixed It will be available in 5.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Oliver Specht committed a patch related to this issue. It has been pushed to "libreoffice-5-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=74d6d268e9a7193dcca39bbfad2830a2504dfe79&h=libreoffice-5-0 tdf#94624 calculation of power operator fixed It will be available in 5.0.4. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Works fine now. Thank you! LO v 5.0.4.2 Windows 8.1 x64
In accord with comment 4 and my experiment with daily dbgutil bibisect version 2915-12-21, I am setting status RESOLVED FIXED. Thank you, Oliver.