tdf#94624 calculation of power operator fixed

cell values are added in parentheses to make sure negative values are handled
correctly

Change-Id: I7366493e3cd6c25607e311d4b610ef8aa704a8bb
Reviewed-on: https://gerrit.libreoffice.org/19821
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
(cherry picked from commit 0bd2a5eedd91466f97806e198b125546d256d1f8)
Reviewed-on: https://gerrit.libreoffice.org/19826
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 74d6d268e9a7193dcca39bbfad2830a2504dfe79)